Move deleted to deleted domains table
